--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
