--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "createcompte",
         "ficheid",
         "medecin"
-    ]
+    ],
+    "editor.wordBasedSuggestions": "matchingDocuments"
 }
