--- a/ingress.yaml
+++ b/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: frontend-ingress
 spec:
   rules:
-  - host: frontend.example.com
+  - host: frontend.arij.com
     http:
       paths:
       - path: /
