--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "selenium-webdriver": "^4.20.0",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -42,6 +43,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "protractor": "^7.0.0",
     "typescript": "~5.0.2"
   }
 }
