--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "@angular/router": "^16.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@syncfusion/ej2-angular-calendars": "^25.2.4",
+    "@types/fullcalendar": "^3.8.0",
+    "assert": "^2.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
-    "selenium-webdriver": "^4.20.0",
+    "selenium-webdriver": "^4.21.0",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
