mise a jour lilet sallah 2

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.language=ts
 sonar.typescript.lcov.reportPaths=coverage/lcov-report/*.xml
 
 sonar.host.url=http://localhost:9000
-sonar.login=your_auth_token
+sonar.login=sqa_81bfb327871d0221df3cdc246ab6855919299ac4
